# pjecz-delphinus-flask

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  skills-lock.json
cli/: app.py
cli/commands/: db.py  udp_personas.py  usuarios.py
pjecz_delphinus_flask/: app.py
pjecz_delphinus_flask/blueprints/autoridades/: forms.py  models.py  views.py
pjecz_delphinus_flask/blueprints/bitacoras/: models.py  views.py
pjecz_delphinus_flask/blueprints/distritos/: forms.py  models.py  views.py
pjecz_delphinus_flask/blueprints/entradas_salidas/: models.py  views.py
pjecz_delphinus_flask/blueprints/estados/: models.py  views.py
pjecz_delphinus_flask/blueprints/modulos/: forms.py  models.py  views.py
pjecz_delphinus_flask/blueprints/municipios/: models.py  views.py
pjecz_delphinus_flask/blueprints/permisos/: forms.py  models.py  views.py
pjecz_delphinus_flask/blueprints/roles/: models.py  views.py
pjecz_delphinus_flask/blueprints/sistemas/: views.py
pjecz_delphinus_flask/blueprints/tareas/: models.py  views.py
pjecz_delphinus_flask/blueprints/udp_personas/: forms.py  models.py  views.py
pjecz_delphinus_flask/blueprints/udp_personas_atenciones/: forms.py  models.py  views.py
pjecz_delphinus_flask/blueprints/udp_personas_contrapartes/: forms.py  models.py  views.py
pjecz_delphinus_flask/blueprints/udp_personas_domicilios/: forms.py  models.py  views.py
pjecz_delphinus_flask/config/: settings.py
pjecz_delphinus_flask/lib/: datatables.py  pwgen.py  safe_string.py  universal_mixin.py
(+97 files in other folders)
