[project]
name = "pjecz-delphinus-flask"
version = "0.1.0"
description = "Sistema para las atenciones de Defensoría."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=49.0.0",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-moment>=1.0.6",
    "flask-socketio>=5.6.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.3.0",
    "gunicorn>=26.0.0",
    "jinja2>=3.1.6",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytz>=2026.2",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.51",
    "sqlalchemy-utils>=0.42.1",
    "unidecode>=1.4.0",
    "uvicorn>=0.50.2",
    "werkzeug>=3.1.8",
]

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
reportCallIssue = "hint"
reportMissingImports = "warning"
reportUndefinedVariable = "warning"
exclude = ["**/tests"]

[tool.ruff]
ignore = ["F821"]
line-length = 128
